--- a/Italian/main/miui.apk/assets/license/it_IT/eula.html
+++ b/Italian/main/miui.apk/assets/license/it_IT/eula.html
@@ -287,68 +287,68 @@ In spite of the preceding provisions, this Agreement becomes effective the first
     </ol>
   </div>
   <div class="item item9">
-    <h3>9.	Additional Terms</h3>
+    <h3>9.	Termini aggiuntivi</h3>
     <ol>
       <li>
 1)	Feedback
 		<ul>
 			<li>
-Our suggestion to Xiaomi (“Feedback”) is regarded as transferring all rights of Feedback; as agreeing Xiaomi has the right to make use of the Feedback in any appropriate method. We also consider this feedback unclassified and non-exclusive. 
+Il nostro suggerimento per Xiaomi ("Feedback") è considerato come il trasferimento di tutti i diritti di feedback; come concordato, Xiaomi ha il diritto di fare uso del feedback in qualsiasi metodo appropriato. Consideriamo anche questhi feedback non classificati e non esclusivi.
 			</li>
 			<li>
-You agree you will not provide any information you regard as privacy and proprietary to Xiaomi. 
+Accetti di non fornire a Xiaomi nessuna informazione ritenuta personale o soggetta a privacy
 			</li>
 			<li>
-We will examine the rights (not obligations) on our judgments. We have the right to remove you user content anytime with any reason. According to the term of Modification and Termination, we have the right to reserve or terminate your account.
-			</li>
-		</ul>
-      </li>
-	  <li>
-2)	Privacy Policy
-		<ul>
-			<li>
-Please review our Privacy Policy, which is equivalently valid and indivisible to this Agreement.
+Esamineremo i diritti (non obblighi) a nostro giudizio. Abbiamo il diritto di rimuovere i contenuti di voi utenti in qualsiasi momento e per qualsiasi motivo. Secondo il termine di modifica e cessazione, abbiamo il diritto di riservare o chiudere l'account.
 			</li>
 		</ul>
       </li>
 	  <li>
-3)	Notification
+2)	Politiche privacy
 		<ul>
 			<li>
-You have to provide your recently regular and valid email address. Xiaomi will not take any responsibility for the risks owing to the invalidation of the email address or other reasons that we cannot notify you. Undoubtedly, the notifications on the Site and emails sent to you consist of valid notifications. 
+Si prega di consulare le nostre Politiche Privacy, che sono altrettanto valide ed indivisibili da questo Accordo.
 			</li>
 		</ul>
       </li>
 	  <li>
-4)	Applicable Law
+3)	Notifiche
 		<ul>
 			<li>
-The interpretation of the terms of this Agreement, effectiveness and dispute resolution, are applicable to the laws of PRC.
-			</li>
-			<li>
-If the user has any dispute or controversy with Xiaomi, should first be settled through friendly consultation, the consultation falls, the user agree to submit the dispute to the jurisdiction court, where Xiaomi is located. 
+È necessario fornire il proprio indirizzo e-mail più recente, regolare e valido. Xiaomi non si assume alcuna responsabilità per i rischi derivanti da da un indirizzo email non valido o per altre ragioni che ci portiamo a non potervi fornire le notificare. Indubbiamente, le notifiche sul Sito e le email a te inviate sono da considerarsi notifiche valide.
 			</li>
 		</ul>
       </li>
 	  <li>
-5)	Independence
+4)	Legge applicabile
 		<ul>
 			<li>
-If some provisions of this Agreement cannot be applied for some reason, other provisions remain applicable and the provisions inapplicable will be revised to apply legally.
+Per l'interpretazione dei termini del presente Contratto, l'efficacia e la risoluzione delle controversie, si applicano le leggi della Repubblica popolare cinese.
+			</li>
+			<li>
+Se l'utente ha qualche disputa o controversia con Xiaomi, questa deve prima essere risolte mediante consultazioni amichevoli; qualora la consultazione non abbia effetto, l'utente accetta di sottoporre la controversia al tribunale competente, dove si trova Xiaomi.
 			</li>
 		</ul>
       </li>
 	  <li>
-6)	Integrality
+5)	Indipendenza
 		<ul>
 			<li>
-This Agreement (including Privacy Policy) is the ultimate, integral and exclusive agreement between you and Xiaomi, in terms of the related matters of the Site and Xiaomi product, programs and services.
+Se alcune disposizioni del presente accordo non possono essere applicate per qualche ragione, le altre disposizioni restano in vigore e le disposizioni inapplicabili saranno riviste per applicarle legalmente.
+      </li>
+		</ul>
+      </li>
+	  <li>
+6)	Integralità
+		<ul>
+			<li>
+Questo Accordo (inclusa le Politiche Privacy) è il definitivo, integrale e eslusivo accordo tra te e Xiaomi, nei termini  delle questioni relative a prodotti, programmi, servizi e siti web di Xioami.
 			</li>
 			<li>
-The title of each paragraph is written only for the convenience of reading and does not have any legal or contractual obligations. 
+Il tiolo di ciascun paragrafo è scritto solo per semplificare la lettura e non ha nessun valore legale ne costituisce obblighi contrattuali. 
 			</li>
 			<li>
-Without written consent from Xiaomi, you cannot transfer the rights and obligations stated in this Agreement. Any behavior or activity violates the provision about transfer attempt is invalid.
+Senza il consenso scritto da parte di Xiaomi, non puoi trasferire i diritti e gli obblighi stabiliti in questo Accordo. Qualsiasi comportamente o attività violi la disposizione sul tentativo di trasferimento è da ritenersi non valido.
 			</li>
 		</ul>
       </li>
@@ -358,11 +358,11 @@ Without written consent from Xiaomi, you cannot transfer the rights and obligati
     <h3>10.	Contact Us</h3>
     <ol>
 Xiaomi Inc.
-      <li>&nbsp;&nbsp;Address: CR Dreamport, No. 68 Qinghe Middle Road, Haidian Dist. Beijing, China. 
+      <li>&nbsp;&nbsp;Indirizzo: CR Dreamport, No. 68 Qinghe Middle Road, Haidian Dist. Beijing, China. 
 
 
       </li>
-	  <li>&nbsp;&nbsp;Zip Code: 100085
+	  <li>&nbsp;&nbsp;CAP: 100085
       </li>
 	  <li>&nbsp;&nbsp;Tel: 010－6060 6666 
       </li>
