--- a/Italian/main/miui.apk/assets/license/it_IT/eula.html
+++ b/Italian/main/miui.apk/assets/license/it_IT/eula.html
@@ -20,29 +20,29 @@ body{padding:10px;font-size:14px;}
 </head>
 <body>
 <div id="biaoti">
-  <h2>User Agreement</h2>
+  <h2>Accordo con l'Utente</h2>
 </div>
 <div id="neirong">
   <div class="item item0">
-    <h3>Welcome to Xiaomi!</h3>
-    <p>User Agreement（"<strong>Agreement</strong>"）is entered into among you(or"<strong>User</strong>",means all the individuals or entities who register, login, use or browse our services), Xiaomi Inc. (hereinafter as "<strong>Xiaomi</strong>"),and our operational cooperators (hereinafter as "<strong>Cooperator</strong>"),with respect to www.xiaomi.com (hereinafter as “Site”) and the products, programs and services (including but not limited to MiTalk and MIUI) of Xiaomi.</p>
-    <p>Please read this Agreement carefully, including Disclaimer of Warranty, Limitation of Liability, and Rights and Limitations. Please choose to accept or not to accept this Agreement (minors should read this Agreement accompanied by legal guardian). Unless you agree to comply with this Agreement, you are not authorized to register, login or use services under this Agreement. Behaviors such as registering, logging in and using etc. will be deemed that you agree to accept and be bound by this agreement.</p>
-    <p>By accepting this Agreement, you agree to accept all constraints, including accepting Xiaomi reserves the right to modify the terms of this Agreement, without additional notice to the individual user. The user can log into the webpage of terms of Agreement at any time to check the latest User agreement. If the user does not agree to the amended content, you can stop using Xiaomi services. If user continues to enjoy the services provide by Xiaomi, Xiaomi regard the user as accepting the revised content.</p>
+    <h3>Benvenuto in Xiaomi!</h3>
+    <p>L'Accordo con l'utente ("<strong>Accordo</strong>"） intercorre tra te (o l'"<strong>Utente</strong>", cioè tutti gli individui o le entità che si registrano, eseguono l'accesso, usano o sfogliano i nostri servizi), la Xiaomi Inc. (da qui in modo riportata come "<strong>Xiaomi</strong>"), e i nostri collaboratori (da qui in poi "<strong>Collaboratori</strong>"), in relazione a www.xiaomi.com (da qui in poi “il Sito”) e i prodotti, programmi e servizi (inclusi, ma non limitato a, MiTalk e MIUI) di Xiaomi.</p>
+    <p>Per favore, leggi questo Accordo con attenzione, compresi Esclusioni dalla garanzia, Limitazioni di responsabilità, e Diritti e limitazione. Si prega di scegliere di accettare o meno questo Accordo (i minori dovrebbero leggere questo Accordo accompaniati da un tutore legale). A meno che tu non sia completamente d'accordo, non sei autorizzato a registrarti, eseguire l'accesso o usare i nostri servizi regolati da questo Accordo. Comportamenti come registrarsi, accedere e usare, ecc., saranno considerati come formale accettazione e vincolanti all'accettazione di questo Accordo.</p>
+    <p>Accettando questo Accordo, acconsenti ad accettare tutti i vincoli, incluso accettare il diritti di Xiaomi a riservarsi il diritto di modificare i termini di questo Contratto, senza notificare le modifiche al singolo utente. L'utente può accedere alla pagina web con i termini di contratto quando vuole per verificare l'ultima versione dell'Accordo con l'Utente. Se l'utente non accetta le variazioni al contenuto, può smettere di usare i servizi di Xiaomi. Se l'utente continua ad usufruire dei servizi forniti da Xiaomi, Xiaomi considererà l'utente come d'accordo con le modifiche al contenuto di questo Accordo.</p>
   </div>
   <div class="item item1">
-    <h3>1.	Terms of Use</h3>
+    <h3>1.	Termini di utilizzo</h3>
     <ol>
       <li>
-1)	In general, you can view the Site without registration. However, you are required to register Xiaomi account and provide relevant personal information on the registration webpage in order to get access to more tools of the Site and products, programs, services of Xiaomi.  You can terminate your account under the instructions of the Site, and the Site will determine to keep or terminate your account based on this Agreement. You warrant and undertake hereby: 
+1)	In generale, puoi visualizzare il Sito senza registrazione. Comunque, occorre registrare un proprio account Xiaomi e fornire informazioni personali rilevanti nella pagina di registrazione per poter ottenere l'accesso a strumenti aggiuntivi del Sito e ai prodotti, programmi e servizi di Xiaomi. Puoi chiudere il tuo account seguendo le istruzioni del Sito, e il sito determinerà se mantenere o chiudere il tuo account in base a questo Accordo. L'utente si fa garante, ed è stabilito quanto segue:
         <ul>
           <li>
-	You understand and agree that the Site is the product of application service. The user must take full responsibilities for the authenticity, legality and validity of the registration information; the user cannot personate others to post any information; cannot use registered accounts maliciously that lead to mistaking; otherwise, we have the right to suspend the services and you must bear all legal liability alone;
+	L'utente riconosce e accetta che il sito è il prodotto di servizio applicativo. L'utente deve assumersi piena responsabilità per l'autenticità, la legalità e la validità delle informazioni di registrazione; l'utente non può impersonare altri al fine di pubblicare qualsiasi informazione; non è possibile utilizzare account registrati maliziosamente che portano a qualche tipo di incomprensioni; in caso contrario, abbiamo il diritto di sospendere i servizi e l'utente accetta tutte le responsabilità legali individuali;
           </li>
           <li>
-	You must use the Site and the products, programs and services of Xiaomi legally. You must take all responsibilities for activities under your registered accounts, including your statements and any results of your statements. You should estimate the content by your own and take all risks from it, including the risk that lies on the correctness, integrity or practicability of the content. Xiaomi will not take any responsibility for any loss or damage results from this behavior or activity;
-          </li>
+	E' necessario utilizzare il Sito e i prodotti, programmi e servizi di Xiaomi in modi legali. Ti assumi tutte le responsabilità per le attività condotte con il tuo account registrato, incluse le dichiarazioni e le conseguenza delle tue dichiarazioni. Dovresti sempre valutare da te i contenuti che pubblichi e quindi assumerti i rischi che questo comporta, inclusi i rischi legati alla correttezza, integrità o praticabilità dei contenuti. Xiaomi non si assumerà nessuna responsabilità derivanti da perdita o danneggiamenti risultanti dai tuoi comportamenti o attività;
+            </li>
           <li>
-	You have the obligation to take good care of the registration information on the Site and are responsible for all the activities of login and afterwards activities. You must immediately notify Xiaomi once you find account or password abused by others or used in unusual circumstances. Xiaomi will be not liable for damages or losses without complying with the provision above;
+	Hai l'obbligo di custodire le informazioni di registrazione al Sito e sei responsabile per tutte le attività di accesso e per le successiva attività. Devi avvertire immediatamente Xiaomi una volta se il tuo account o la tua password sono soggetti ad abusi da parte di altri o se vengono usati in circostanze non usuali. Xioami non sarà perseguibile per danni o perdite se non si è proceduto ad effettuare queste segnalazioni;
           </li>
           <li>
 	All your statements on the Site are public information; any third party can acquire the statements through our platform. Any statement posted on the Site will be deemed as public information, and user should bear legal liability for this activity. If you do not want any third party to get your statements, please do not post it on the Site.
