--- a/Italian/main/miui.apk/assets/license/it_IT/eula.html
+++ b/Italian/main/miui.apk/assets/license/it_IT/eula.html
@@ -33,7 +33,7 @@ body{padding:10px;font-size:14px;}
     <h3>1.	Termini di utilizzo</h3>
     <ol>
       <li>
-1)	In generale, puoi visualizzare il Sito senza registrazione. Comunque, occorre registrare un proprio account Xiaomi e fornire informazioni personali rilevanti nella pagina di registrazione per poter ottenere l'accesso a strumenti aggiuntivi del Sito e ai prodotti, programmi e servizi di Xiaomi. Puoi chiudere il tuo account seguendo le istruzioni del Sito, e il sito determinerà se mantenere o chiudere il tuo account in base a questo Accordo. L'utente si fa garante, ed è stabilito quanto segue:
+1)	In generale, puoi visualizzare il Sito senza registrazione. Comunque, occorre registrare un proprio account Xiaomi e fornire informazioni personali rilevanti nella pagina di registrazione per poter ottenere l'accesso a strumenti aggiuntivi del Sito e ai prodotti, programmi e servizi di Xiaomi. Puoi chiudere il tuo account seguendo le istruzioni del Sito, e il sito determinerà se mantenere o chiudere il tuo account in base a questo Accordo. L'utente garantisce quanto segue:
         <ul>
           <li>
 	L'utente riconosce e accetta che il sito è il prodotto di servizio applicativo. L'utente deve assumersi piena responsabilità per l'autenticità, la legalità e la validità delle informazioni di registrazione; l'utente non può impersonare altri al fine di pubblicare qualsiasi informazione; non è possibile utilizzare account registrati maliziosamente che portano a qualche tipo di incomprensioni; in caso contrario, abbiamo il diritto di sospendere i servizi e l'utente accetta tutte le responsabilità legali individuali;
@@ -45,73 +45,72 @@ body{padding:10px;font-size:14px;}
 	Hai l'obbligo di custodire le informazioni di registrazione al Sito e sei responsabile per tutte le attività di accesso e per le successiva attività. Devi avvertire immediatamente Xiaomi una volta se il tuo account o la tua password sono soggetti ad abusi da parte di altri o se vengono usati in circostanze non usuali. Xioami non sarà perseguibile per danni o perdite se non si è proceduto ad effettuare queste segnalazioni;
           </li>
           <li>
-	All your statements on the Site are public information; any third party can acquire the statements through our platform. Any statement posted on the Site will be deemed as public information, and user should bear legal liability for this activity. If you do not want any third party to get your statements, please do not post it on the Site.
-          </li>
+  Ogni tua dichiarazione sul Sito è pubblica; qualsiasi terza parte può acquisire le dichiarazioni attraverso la nostra piattaforma. Qualsiasi dichiarazione pubblicata sul Sito sarà considerata come informazioni pubblica, e l'utente dovrebbe accertarsi della legalità di questa attività. Se non vuoi che terze parti ottengano le tue dichiarazioni, per favore non postare sul Sito.
+	        </li>
         </ul>
       </li>
       <li>
-        2)	You acknowledge and understand hereby:	
+        2)	Sei a conoscenza e comprendi quanto segue:	
         <ul>
           <li>
-	In case of business development, we may change, suspend, restrict, terminate or revoke the rights of our services at any time without notice. The user should take this risk;
+  Nel caso di sviluppi del nostro business, possiamo modificare, sospendere, restringere, terminare o revocare i diritti dei nostri servizi in qualsiasi tempi senza alcuna notifica. L'utente dovrebbe prendere queschio rischio;
           </li>
           <li>
-	We may include the advertisements etc. in our services. You agree to display the advertisements and other activities from us and our related parties or cooperators, when enjoying our services;
-          </li>
+  Possiamo inserire pubblicità ed altro nei nostri servizi. Accetti la visualizzazione delle pubblicità ed altre attività da parte nostra legate a terze parti o collaboratori, legate all'uso dei nostri servizi;
+	          </li>
           <li>
-	We have the right suspend any content that violate the laws and regulations or this Agreement; that infringe, prejudice, threat any right or safety, or that personate others, on our own judgment. We also have right to take proper legal actions, including but not limited to removing any illegal or infringing content, suspending the qualification of violators and saving relative information and reporting to related departments based on the laws and regulations;
-          </li>
+  Abbiamo il diritto di sospendere qualsiasi contenuto che violi le leggi e i regolamenti o questo stesso Accordo; questo se infrange, pregiudica o minaccia qualsiasi diritto o la sicurezza, o se si impersona altri, a nostro giudizio. Abbiamo anche il diritto di agire per vie legali, inclusa, ma non limitatamente a, la rimozione di qualsiasi contenuto illegale o offensivo, sospendere le qualifiche dei violatori e memorizzare le relative informazioni e riportare agli uffici preposti in base a leggi e regolamenti;
+	        </li>
           <li>
-	Some of our services have to be used with network, including but not limited to the application market and the theme market. You must bear all the related fees. We strongly advise you contact the providers and check the related fees if the value-added services involved;
+	Alcuni dei nostri servizi devono essere usati in rete, incluso, ma non limitato a, il market delle applicazioni ed il market dei temi. Devi affrontare i relativi costi. Ti incoraggiamo caldamente a contattare il tuo fornitore di servizi e a verificare i costi relativi se vi sono coinvolti servizi a valore aggiunto;
           </li>
 		  <li>
-	With your permission, MiTalk may analyze your phone contacts to find out your friends using MiTalk. MiTalk codes your telephone number through highly intensive and irreversible encryption algorithm and retrieve your contacts in this way to find out accordance with existing users on MiTalk. If accordant, the opposite side might be your friends. Other users also can find and contact you through their phone contacts. 
-          </li>
+  Con il tuo permesso, MiTalk analizza i tuoi contatti nel telefono per cercare i tuoi amici che stanno già usando MiTalk. MiTalk codifica il tuo numero telefono attraverso un algoritmo di criptature irreversibile e altamente complicato e recupera i tuoi contatti in questo stesso modo per trovare altri utenti preesistenti su MiTalk. Se acconsente, l'altro utente potrebbe divenire tuo amico. Anche altri utenti possono trovare e contattarti tramite i loro contatti telefonici.
+	        </li>
         </ul>
       </li>
     </ol>
   </div>
   <div class="item item2">
-    <h3>2.	User Content</h3>
+    <h3>2.	Contenuti utente</h3>
     <ol>
       <li>
-1)	User Content refers to all the content (your information, picture, music or others) results from downloading, releasing or other activities that use the Site and Xiaomi product, programs and services;
-	You are the only responsible individual for the user content. You will bear all the risks results from your disclosing user content.
-
+1) Con il termine Contenuti utente ci si riferisce a qualsiasi contenuto (informazioni, immagini, musica o altro) risultante dal download, rilascio od altre attività relative all'uso del Sito, dei prodotti, programmi e servizi di Xiaomi;
+  Sei l'unico responsabile dei contenuti utente. Devi affrontare i rischi risultanti dalla diffusione dei tuoi contenuti utente;
       </li>
 	  <li>
-2)	When uploading, releasing or engaging in other activities using the Site and Xiaomi product, programs and services, you authorize Xiaomi automatically, and promise and guarantee that you have right to authorize us, irrevocable, nonexclusive, royalty-free and fully paid global permission to:
+2) Quando carichi, rilasci o intrattieni altre attività usando il Sito, o prodotti, programmi e servizi di Xiaomi, automaticamente autorizzi Xiaomi, e prometti e garantisci che hai il diritto di autorizzarci ad avere il permesso globale, irrevocabile, non esclusivo, assente da diritti d'autore e completamente pagato di:
         <ul>
           <li>
-	Copy, publish, display, make derivative works and bring it to other works; or use your user account (except for your personal information) in other ways, only to provide you the Site and products, programs, services of Xiaomi or improve the Site and products programs, services of Xiaomi; And authorize the transferrable permission for preceding matters;
+  Copiare, pubblicare, visualizzare, creare lavori derivati e portarli in altri lavori; oppure usare il tuo account utente (esclusi i dati personali) in altre modi, allo scopo di fornirti il Sito e i prodottoi, programmi e servizi di Xiaomi, o per migliorare Sito, prodotti, programmi o servizi di Xiaomi; autorizzi inoltre il trasferimento dei permessi per gli scopi appena illustrati;
           </li>
           <li>
-Copy and publish your private information from you user content only to provide the personal information to the target receiver;
+Copiare e pubblicare le tua informazioni dai tuoi contenuti utente al solo scopo di provevdere informazioni al destinatario ricevente;
           </li>
           <li>
-You agree with the irrevocable and renunciative (and results in abandoned) statement about the ownership and moral rights of your user content.
+Accetti l'irrevocabile ed irrinunciabile (e quindi abbandonata) dichiarazione sulla proprietà e i diritti morali dei tuoi contenuti utente.
           </li>
         </ul>
       </li>
     </ol>
   </div>
   <div class="item item3">
-    <h3>3.	Rights and Obligations</h3>
+    <h3>3.	Diritti ed obblighi</h3>
     <ol>
       <li>
-1)	You have the right to use the Site legally.
+1)	Hai il diritto di usare il Sito in modo legale.
       </li>
 	  <li>
-2)	You have the right to upload or download, install, and use products, programs, services of Xiaomi on mobile equipment.
+2)	Hai il diritto di caricare o scaricare, installare ed usare prodotti, programmi e servizi di Xioami su dispositivi mobili.
       </li>
 	  <li>
-3)	Xiaomi and our related companies possess the ownership of the Xiaomi accounts. Once you finish registration, you will have the right to use Xiaomi accounts. The right to use only belongs to the original applier and is forbidden to borrow, lease, transfer, gift or sell. Xiaomi have the right to retrieve the user account for operational needs.
+3)	Xiaomi e compagnie collegate posseggono la proprietà degli account Xioami. Una volta completata la tua registrazione, avrai il diritto di usare gli account Xiaomi. Il diritto all'uso appartiene solo all'originale sottoscrittore e non è consentito rubare, prestare, trasferire, regalare o vendere questo diritto. Xiaomi ha il diritto di usare l'account utente per le necessità operative.
       </li>
 	  <li>
-4)	You have the right to change and remove personal, registered information, and the content posted. Please notice that you have to take the risk that any picture or word saved on the system might also be deleted when you remove related information.
+4)	Hai il diritto di modificare e rimuovere le informazioni personali registrare, e i contenuti pubblicati. Si prega di notare che devi assumerti il rischio che immagini o testi salvati sul sistema potrebbero venire rimossi se cancelli informazioni collegate.
       </li>
 	  <li>
-5)	You are responsible for the safety of your account information and password, and should bear legal liability for activities under registered accounts and passwords. You agree not to use the password or account of other users under any circumstances. You agree to immediately notify Xiaomi once you suspect others use your password or your account.
+5)	Sei responsabile per la sicurezza delle informazioni sul tuo account e sulla tua password, e sono sotto tua responsabilità legale le attività svolte con i tuoi account e le tue password. Accetti di non usare le password o gli account  di altri utenti in nessuna circostanza. Accetti di notificare immediatamente a Xioami qualora tu sospettassi che altri stiano usando la tua password od il tuo account.
       </li>
 	  <li>
 6)	Limitations of Rights
