working on eula - 3

--- a/Italian/main/miui.apk/assets/license/it_IT/eula.html
+++ b/Italian/main/miui.apk/assets/license/it_IT/eula.html
@@ -113,40 +113,40 @@ Accetti l'irrevocabile ed irrinunciabile (e quindi abbandonata) dichiarazione su
 5)	Sei responsabile per la sicurezza delle informazioni sul tuo account e sulla tua password, e sono sotto tua responsabilità legale le attività svolte con i tuoi account e le tue password. Accetti di non usare le password o gli account  di altri utenti in nessuna circostanza. Accetti di notificare immediatamente a Xioami qualora tu sospettassi che altri stiano usando la tua password od il tuo account.
       </li>
 	  <li>
-6)	Limitations of Rights
+6)	Limitazioni ai Diritti
 		<ul>
           <li>
-You cannot sell, lease, transfer, release or make other commercial use of the Site or products, programs, services of Xiaomi (including but not limited to the content or the advertisements or sponsored content);
+Non puoi vendere, noleggiare, trasferire, rilasciare o fare altri usi commerciali del Sito o di prodotti, programmi e servzi di Xiaomi (inclusi, ma non limitati a, i contenuti o le pubblicità o i contenut sponsorizzati);
           </li>
           <li>
-You cannot visit the Site or use products, programs, services of Xiaomi to establish similar or competitive services;
+Non puoi visitare il Sito o usare prodotti, programmi e servizi di Xioami allo scopo di creare servizi simili o in competizione;          
           </li>
           <li>
-Unless expressly prescribed by laws, you cannot copy, publish, download, change, translate, merge, decompose, and paste or decompile etc. any part of the Site or products, programs, services of Xiaomi (including but not limited to the content or the advertisements or sponsored content) to in any manner;
+A meno che non sia espresamente prescritto dalle leggi, non puoi copiare, pubblicare, scaricare, modificare, tradurre, unire, scomporre, incollare o decompilare, ecc... nessuna porzione del Sito o dei prodotti, programmi e servizi di Xiaomi (inclusi, ma limitato a, il contenuto o le pubblicità o il contenuto sponsorizzato) in nessuna maniera;
           </li>
           <li>
-You cannot remove any copyright statement or other copyright mark on the Site or products, programs, services of Xiaomi (including but not limited to the content or the advertisements or sponsored content);
+Non puoi rimuovere le dichiarazioni di copyright o altre dicitura di copyright dal Sito o da prodotti, programmi e servizi di Xiaomi (inclusi, ma non limitato a, i contenuti, le pubblicità o i contenuti sponsorizzati);
 
           </li>
 		  <li>
-You agree to bear all the risks and take full legal liability for activities below when using the Site or products, programs, services of Xiaomi:<br>
-Opposing the basic principles determined by the Constitution of the People’s Republic of China;<br>
- Endangering national security, leaking state secrets, subverting the government, and undermining national unity;<br>
-Harming national honor and interests；<br>
-Inciting ethnic hatred or ethnic discrimination, and undermining national unity;<br>
-Undermining national religious policy, promoting cults and superstitions;<br>
-Spreading rumor, disturbing social order, undermining social stability;<br>
-Spreading obscenity, pornography, gambling, violence, murder, terrorism or instigating others to commit crimes;<br>
-Insulting or slandering others, infringing upon the legal rights and interests of others;<br>
-All other content prohibited by the administrative regulations and laws.
+Accetti di affrontare tutti i rischi connessi e prendere la piena responsabilità legale per le attività seguenti eseguite durnate l'uso del Sito o di prodotti, programmi e servizi di Xiaomi: <BR>
+Opposizione ai principi basilari determinati dalla Costituzione della Repubblica Popolare Cinese;<br>
+Mettere in pericolo la sicurezza nazionale, rivelare segreti di Stato, sovvertire il governo, e minare l'unità nazionale;<br>
+Danneggiare l'onore e gli interessi nazionali;<br>
+Incitare all'odio razziale o alla discriminazione etnica, e minando così l'unità nazionale;<br>
+Indebolire la politica religiosa nazionale promuovendo culti e superstizioni;<br>
+Diffondere voci, disturbare l'ordine sociale, minando la stabilità sociale; <br><br>
+Diffondere oscenità, pornografia, gioco d'azzardo, la violenza, l'omicidio, il terrorismo o l'istigazione a commettere altri crimini; <br>
+Insultare o calunniare gli altri, violare i diritti e gli interessi legali degli altri; <br>
+Tutti gli altri contenuti proibiti dai regolamenti amministrativi e dalle leggi.
           </li>
 <li>
-You agree not to use the Site or products, programs, services of Xiaomi to engage in any behavior or activity stated below:<br>
-Upload or post virus, worm, malware or other software that undermine or change computer system or data;<br>
-Collect the information or data of other users, such as email address without authorization;<br>
-Disable the Site connection, make the Site overload or interrupt or undermine the website server and connection in other ways;<br>
-Attempt to visit the Site, MiTalk, our server or the Site connection without authorization;<br>
-Interrupt or undermine other users normally using the Site or products, programs, services of Xiaomi.
+Accetti di non usare il Sito, o prodotti, programmi, e servizi di Xiaomi per avere i comportamenti o fare le attività elencati qui di seguito:<br>
+Caricare o inviare virus, worm, malware o altro software che mini o alteri sistemi informatici o dati;<br>
+Raccogliere le informazioni o dati di altri utenti, come l'indirizzo e-mail, senza autorizzazione;<br>
+Disattivare la connessione al Sito, mandare in sovraccarico Sito o interrompere o compromettere il server web o il collegamento in altri modi;<br>
+Tentare di visitare il sito, MiTalk, il nostro server o connetterti al sito senza autorizzazione;<br>
+Interrompere o minare l'utilizzo normale da parte degli altri utenti del Sito di prodotti, programmi, e servizi di Xiaomi.
 
 </li>
         </ul>
