--- a/Italian/main/miui.apk/assets/license/it_IT/eula.html
+++ b/Italian/main/miui.apk/assets/license/it_IT/eula.html
@@ -123,7 +123,7 @@ Non puoi vendere, noleggiare, trasferire, rilasciare o fare altri usi commercial
 Non puoi visitare il Sito o usare prodotti, programmi e servizi di Xioami allo scopo di creare servizi simili o in competizione;          
           </li>
           <li>
-A meno che non sia espresamente prescritto dalle leggi, non puoi copiare, pubblicare, scaricare, modificare, tradurre, unire, scomporre, incollare o decompilare, ecc... nessuna porzione del Sito o dei prodotti, programmi e servizi di Xiaomi (inclusi, ma limitato a, il contenuto o le pubblicità o il contenuto sponsorizzato) in nessuna maniera;
+A meno che non sia espresamente prescritto dalle leggi, non puoi copiare, pubblicare, scaricare, modificare, tradurre, unire, scomporre, incollare o decompilare, ecc… nessuna porzione del Sito o dei prodotti, programmi e servizi di Xiaomi (inclusi, ma limitato a, il contenuto o le pubblicità o il contenuto sponsorizzato) in nessuna maniera;
           </li>
           <li>
 Non puoi rimuovere le dichiarazioni di copyright o altre dicitura di copyright dal Sito o da prodotti, programmi e servizi di Xiaomi (inclusi, ma non limitato a, i contenuti, le pubblicità o i contenuti sponsorizzati);
