--- a/Italian/main/Browser.apk/assets/yellowpage3-it-rIT/hdpi/yellowpage.html
+++ b/Italian/main/Browser.apk/assets/yellowpage3-it-rIT/hdpi/yellowpage.html
@@ -15,7 +15,7 @@ li {margin: 0.3em 0;line-height:22px;color:#464646;float:left;text-align:left;}
 .item a:visited{text-decoration:none;color:black;}
 .item a:active{background-color:#FF7E00;}
 </style>
-<title>Yellowpage</title>
+<title>Pagine gialle</title>
 </head>
 <body>
 <div>
@@ -29,7 +29,7 @@ li {margin: 0.3em 0;line-height:22px;color:#464646;float:left;text-align:left;}
       <li><a href="http://wikipedia.org/">Wikipedia</a></li>
       <li><a href="http://yahoo.com/">Yahoo</a></li>
       <li><a href="http://amazon.it/">Amazon</a></li>
-      <li><a href="http://ebay.com">Ebay</a></li>
+      <li><a href="http://ebay.it">Ebay</a></li>
       <li><a href="http://youtube.com/">Youtube</a></li>
       <div style="clear:both"></div>
     </ul>
